python-json-pointer (1.10-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Fixed VCS URLs (https).
  * Added simple Debian tests.
  * Standards-Version bumped to 3.9.8 (no changes needed)
  * d/copyright
    - Fixed order
    - Added myself to Debian part

 -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:40:14 +0100

python-json-pointer (1.9-3) unstable; urgency=medium

  * override_dh_python3 to fix Py3 shebang.

 -- Thomas Goirand <zigo@debian.org>  Fri, 23 Oct 2015 22:38:57 +0000

python-json-pointer (1.9-2) unstable; urgency=medium

  * Uploading to unstable.
  * Standards-Version is now 3.9.6.
  * Added dh-python in build-depends, removed versions for python-all and
    python3-all.

 -- Thomas Goirand <zigo@debian.org>  Fri, 16 Oct 2015 09:55:07 +0000

python-json-pointer (1.9-1) experimental; urgency=medium

  * New upstream release.
  * Removed applied upstream utf8 in setup.py patch.
  * Added management of /usr/bin/jsoinpointer using update-alternatives, so
    that Python 2 and 3 versions don't conflict.

 -- Thomas Goirand <zigo@debian.org>  Mon, 30 Mar 2015 10:31:06 +0200

python-json-pointer (1.0-2) unstable; urgency=low

  * Ran wrap-and-sort.
  * Adds support for python3.
  * Adds Ubuntu patch for utf-8 in setup.py fixing FTBFS.
  * Adds README.md in the doc folders.
  * Cleans correctly (allow to build twice).
  * Standards-Version: 3.9.4

 -- Thomas Goirand <zigo@debian.org>  Thu, 30 May 2013 14:02:39 +0800

python-json-pointer (1.0-1) unstable; urgency=low

  * Uploading to unstable.
  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Sat, 11 May 2013 06:56:05 +0000

python-json-pointer (0.6-2) experimental; urgency=low

  * Added patch from Ubuntu to run tests at build time (Closes: #702292).

 -- Thomas Goirand <zigo@debian.org>  Tue, 05 Mar 2013 05:27:55 +0000

python-json-pointer (0.6-1) experimental; urgency=low

  * Initial release (Closes: #699507).
