@@ -7,6 +7,7 @@ python-json-pointer (1.10-1) UNRELEASED; urgency=medium
   * d/copyright
     - Fixed order
     - Added myself to Debian part
+  * Added -doc package with sphinx documentation
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:40:14 +0100
 
